--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendors/esockets-php"]
 	path = vendors/esockets-php
-	url = git@github.com:maestroprog/esockets-php.git
+	url = git://github.com/maestroprog/esockets-php.git
