development in process

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
       "name": "Ruslan Yarullin",
       "email": "maestroprog@gmail.com",
       "homepage": "http://yr0.ru/",
-      "role": "developer",
+      "role": "developer"
     }
   ],
   "support": {
