--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "maestroprog/container": "dev-master"
   },
   "require-dev": {
+    "phpunit/phpunit": "^6.3",
     "satooshi/php-coveralls": "^1.0"
   },
   "minimum-stability": "dev",
