--- a/composer.json
+++ b/composer.json
@@ -22,19 +22,14 @@
   },
   "require": {
     "maestroprog/esockets": "dev-2.1-dev",
-    "maestroprog/container": "dev-master"
+    "maestroprog/di-container": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.3",
     "satooshi/php-coveralls": "^1.0"
   },
   "minimum-stability": "dev",
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/maestroprog/di-container"
-    }
-  ],
+  "repositories": [],
   "autoload": {
     "psr-4": {
       "Maestroprog\\Saw\\": "src/"
