--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "maestroprog/saw",
-  "description": "Async php framework",
+  "description": "Async multi-threading php framework",
   "version": "0.2-dev",
   "type": "library",
   "keywords": [
@@ -21,15 +21,14 @@
     "email": "maestroprog@gmail.com"
   },
   "require": {
-    "qwerty-php/app-interface": "@dev",
-    "maestroprog/esockets": "dev-2.1-dev",
+    "qwerty-php/app-interface": "1.0",
+    "maestroprog/esockets": "dev-2.1-dev as 2.1",
     "maestroprog/di-container": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.3",
+    "phpunit/phpunit": ">=7.0",
     "satooshi/php-coveralls": "^1.0"
   },
-  "minimum-stability": "dev",
   "repositories": [
     {
       "type": "vcs",
