--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,13 @@
   "minimum-stability": "beta",
   "autoload": {
     "psr-4": {
-      "Maestroprog\\Saw\\": "src/"
+      "Maestroprog\\Saw\\": "src/",
+      "Maestroprog\\Saw\\Sample\\": "sample/"
     }
   },
   "bin": [
     "bin/controller",
     "bin/worker",
     "bin/debug"
-  ],
-  "bin-dir": "bin"
+  ]
 }
