Подготовил код для асинхронной работы в одном потоке.

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "psr-4": {
       "Maestroprog\\Saw\\": "src/",
       "Maestroprog\\Saw\\Sample\\": "sample/"
-    }
+    },
+    "files": ["src/functions.php"]
   },
   "bin": [
     "bin/controller",
