--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
     "email": "maestroprog@gmail.com"
   },
   "require": {
+    "php": ">=7.1",
     "qwerty-php/app-interface": "1.0",
     "maestroprog/esockets": "^2.1",
-    "maestroprog/di-container": "^1.0"
+    "maestroprog/di-container": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": ">=7.0",
@@ -40,7 +41,9 @@
       "Maestroprog\\Saw\\": "src/",
       "Maestroprog\\Saw\\Sample\\": "sample/"
     },
-    "files": ["src/functions.php"]
+    "files": [
+      "src/functions.php"
+    ]
   },
   "bin": [
     "bin/controller",
